css logo fix on smaller screens

--- a/src/scss/_main-nav.scss
+++ b/src/scss/_main-nav.scss
@@ -141,3 +141,9 @@
     }
 
 }
+
+@media (max-width: 576px) {
+    .page-header__logo {
+        display: none;
+    }  
+}
